# pico-tpmsniffer-spi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  spi_sniffer.pio
hardware/: PCB_PCB_pico-tpmsniffer-shield_2024-11-16.json
